// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainModal.vue add requirements renders correctly 1`] = `
<b-modal-stub active="true" width="960" animation="zoom-out" oncancel="function _default() {}" scroll="clip" destroyonhide="true" readyfortrain="true" languagesreadyfortrain="[object Object]">
  <div id="tour-training-step-7" is-previous-disabled="true" is-finish-disabled="true">
    <div class="train-modal">
      <div class="train-modal__close">
        <b-icon-stub icon="close" class="train-modal__close__icon"></b-icon-stub>
      </div>
      <div class="train-modal__container"><strong class="train-modal__text-warning">
          some specific text</strong>
        <div class="train-modal__wrapper">
          <p class="train-modal__wrapper__subtitle">
            some specific text
          </p>
          <div class="train-modal__wrapper__content">
            <div>
              <div class="train-modal__wrapper__content__content-requirements">
                <div class="train-modal__wrapper__content__content-requirements__item">
                  <div class="train-modal__wrapper__content__content-requirements__item__field">
                    <b-tag-stub type="is-primary" rounded="true" tabstop="true">en</b-tag-stub>
                  </div>
                  <p><strong>requirement 1</strong> <br> <span></span></p>
                  <b-icon-stub icon="close" class="train-modal__wrapper__content__content-requirements__item__icon"></b-icon-stub>
                </div>
              </div>
            </div>
            <!---->
          </div>
          <div class="train-modal__buttons">
            <b-button-stub type="is-primary" nativetype="button" tag="button" class="train-modal__buttons__style"><span>some specific text</span></b-button-stub>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</b-modal-stub>
`;

exports[`TrainModal.vue add warning renders correctly 1`] = `
<b-modal-stub active="true" width="960" animation="zoom-out" oncancel="function _default() {}" scroll="clip" destroyonhide="true" readyfortrain="true" languagesreadyfortrain="[object Object]">
  <div id="tour-training-step-7" is-previous-disabled="true" is-finish-disabled="true">
    <div class="train-modal">
      <div class="train-modal__close">
        <b-icon-stub icon="close" class="train-modal__close__icon"></b-icon-stub>
      </div>
      <div class="train-modal__container"><strong class="train-modal__text-warning">
          some specific text</strong>
        <div class="train-modal__wrapper">
          <p class="train-modal__wrapper__subtitle">
            some specific text
          </p>
          <div class="train-modal__wrapper__content">
            <!---->
            <div>
              <div class="train-modal__wrapper__content__content-requirements">
                <div class="train-modal__wrapper__content__content-requirements__item">
                  <div class="train-modal__wrapper__content__content-requirements__item__field">
                    <b-tag-stub type="is-primary" rounded="true" tabstop="true">en</b-tag-stub>
                  </div>
                  <p><strong>warning 1</strong> <br> <span></span></p>
                  <b-icon-stub icon="close" class="train-modal__wrapper__content__content-requirements__item__icon"></b-icon-stub>
                </div>
              </div>
            </div>
          </div>
          <div class="train-modal__buttons">
            <b-button-stub type="is-primary" nativetype="button" tag="button" class="train-modal__buttons__style"><span>some specific text</span></b-button-stub>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</b-modal-stub>
`;

exports[`TrainModal.vue renders correctly 1`] = `
<b-modal-stub active="true" width="960" animation="zoom-out" oncancel="function _default() {}" scroll="clip" destroyonhide="true" readyfortrain="true" languagesreadyfortrain="[object Object]">
  <div id="tour-training-step-7" is-previous-disabled="true" is-finish-disabled="true">
    <div class="train-modal">
      <div class="train-modal__close">
        <b-icon-stub icon="close" class="train-modal__close__icon"></b-icon-stub>
      </div>
      <div class="train-modal__container"><strong class="train-modal__text-warning">
          some specific text</strong>
        <!---->
      </div>
    </div>
  </div>
</b-modal-stub>
`;
